--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f7aa">  <td>24/02/27 17:59:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.chckvldcredential_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@7e7be63f]">chckvldcredential_LoginTest</td> 
-  <td>main@426394307</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>24/02/27 17:58:59</td>   <td>-2630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@7e7be63f]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@426394307</td>   <td></td> </tr>
-<tr bgcolor="70f7aa">  <td>24/02/27 17:59:01</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@7e7be63f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8872e1">  <td>24/02/29 13:15:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC007_opportunityBtn_clcksuccess()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@25fb8912]">TC007_opportunityBtn_clcksuccess</td> 
+  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="8872e1">  <td>24/02/29 13:15:57</td>   <td>5141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC008_oppListcountChck()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@25fb8912]">TC008_oppListcountChck</td> 
+  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="8872e1">  <td>24/02/29 13:15:53</td>   <td>1274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@25fb8912]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="8872e1">  <td>24/02/29 13:15:53</td>   <td>1274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@25fb8912]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="8872e1">  <td>24/02/29 13:15:59</td>   <td>6869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@25fb8912]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
+<tr bgcolor="8872e1">  <td>24/02/29 13:15:59</td>   <td>6869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@25fb8912]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@903525611</td>   <td></td> </tr>
 </table>
