--- a/test-output/old/vspace_TestSuite/methods.html
+++ b/test-output/old/vspace_TestSuite/methods.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>vspace_TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC006_chckblankemailPassws_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">TC006_chckblankemailPassws_LoginTest</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:36:56</td>   <td>-13396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC003_chckInvldPasswd_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">TC003_chckInvldPasswd_LoginTest</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:12</td>   <td>2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:12</td>   <td>2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:12</td>   <td>2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:12</td>   <td>2482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC004_chckblankemail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">TC004_chckblankemail_LoginTest</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:12</td>   <td>2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>24/02/28 17:37:18</td>   <td>8085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@61001b64]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:10</td>   <td>534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>24/02/28 17:37:23</td>   <td>13288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@61001b64]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:10</td>   <td>534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:07</td>   <td>-2583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC005_chckblankpassword_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">TC005_chckblankpassword_LoginTest</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>24/02/28 17:37:23</td>   <td>13288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@61001b64]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>24/02/28 17:37:21</td>   <td>11697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC008_oppListcountChck()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@61001b64]">TC008_oppListcountChck</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:10</td>   <td>534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:10</td>   <td>534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:10</td>   <td>534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:00</td>   <td>-9763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC001_chckvldcredential_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">TC001_chckvldcredential_LoginTest</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:12</td>   <td>2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:04</td>   <td>-5649</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC002_chckInvldEmail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">TC002_chckInvldEmail_LoginTest</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:12</td>   <td>2940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="78cddf">  <td>24/02/28 17:37:10</td>   <td>534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@618425b5]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>24/02/28 17:37:18</td>   <td>8085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@61001b64]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@1104422581</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>24/02/28 17:37:16</td>   <td>6327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC007_opportunityBtn_clcksuccess()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@61001b64]">TC007_opportunityBtn_clcksuccess</td> 
-  <td>main@1104422581</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>24/02/29 13:13:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:25</td>   <td>-8191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>24/02/29 13:13:40</td>   <td>6663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:25</td>   <td>-8191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:27</td>   <td>-5525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:25</td>   <td>-8191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>24/02/29 13:13:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:21</td>   <td>-11779</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC005_chckblankpassword_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC005_chckblankpassword_LoginTest</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:27</td>   <td>-5525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:27</td>   <td>-5525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:24</td>   <td>-8799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC006_chckblankemailPassws_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC006_chckblankemailPassws_LoginTest</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>24/02/29 13:13:31</td>   <td>-1608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC007_opportunityBtn_clcksuccess()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">TC007_opportunityBtn_clcksuccess</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:27</td>   <td>-6021</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC004_chckblankemail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC004_chckblankemail_LoginTest</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:27</td>   <td>-5525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:17</td>   <td>-15481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC002_chckInvldEmail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC002_chckInvldEmail_LoginTest</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>24/02/29 13:13:37</td>   <td>4363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC008_oppListcountChck()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">TC008_oppListcountChck</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:27</td>   <td>-5525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:25</td>   <td>-8191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:12</td>   <td>-20696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC001_chckvldcredential_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC001_chckvldcredential_LoginTest</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:27</td>   <td>-5525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:25</td>   <td>-8191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>24/02/29 13:13:40</td>   <td>6663</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:08</td>   <td>-25191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC003_chckInvldPasswd_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC003_chckInvldPasswd_LoginTest</td> 
+  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="83dc97">  <td>24/02/29 13:13:25</td>   <td>-8191</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
 </table>
