--- a/test-output/old/vspace_TestSuite/methods-alphabetical.html
+++ b/test-output/old/vspace_TestSuite/methods-alphabetical.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>vspace_TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC001_chckvldcredential_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC001_chckvldcredential_LoginTest</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:39</td>   <td>5604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC002_chckInvldEmail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC002_chckInvldEmail_LoginTest</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:29</td>   <td>-3904</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC003_chckInvldPasswd_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC003_chckInvldPasswd_LoginTest</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:48</td>   <td>14397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC004_chckblankemail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC004_chckblankemail_LoginTest</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:42</td>   <td>8432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC005_chckblankpassword_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC005_chckblankpassword_LoginTest</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:45</td>   <td>11776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC006_chckblankemailPassws_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">TC006_chckblankemailPassws_LoginTest</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>24/03/01 18:02:52</td>   <td>19042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC007_opportunityBtn_clcksuccess()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">TC007_opportunityBtn_clcksuccess</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>24/03/01 18:02:58</td>   <td>24248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC008_oppListcountChck()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">TC008_oppListcountChck</td> 
-  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:46</td>   <td>12354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:46</td>   <td>12354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>24/03/01 18:02:54</td>   <td>20378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:46</td>   <td>12354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:46</td>   <td>12354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>24/03/01 18:02:54</td>   <td>20378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:46</td>   <td>12354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:46</td>   <td>12354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:48</td>   <td>14888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:48</td>   <td>14888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:48</td>   <td>14888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:48</td>   <td>14888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:48</td>   <td>14888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>24/03/01 18:02:59</td>   <td>25821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="6773a3">  <td>24/03/01 18:02:59</td>   <td>25821</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@59505b48]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
-<tr bgcolor="83dc97">  <td>24/03/01 18:02:48</td>   <td>14888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@4f2b503c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@579294521</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC001_chckvldcredential_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">TC001_chckvldcredential_LoginTest</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:40</td>   <td>7365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC002_chckInvldEmail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">TC002_chckInvldEmail_LoginTest</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:29</td>   <td>-4372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC003_chckInvldPasswd_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">TC003_chckInvldPasswd_LoginTest</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:50</td>   <td>17181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC004_chckblankemail_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">TC004_chckblankemail_LoginTest</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:44</td>   <td>11433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC005_chckblankpassword_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">TC005_chckblankpassword_LoginTest</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:47</td>   <td>14426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TC006_chckblankemailPassws_LoginTest()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">TC006_chckblankemailPassws_LoginTest</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="a2636a">  <td>24/03/04 15:28:56</td>   <td>22621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC007_opportunityBtn_clcksuccess()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@74cadd41]">TC007_opportunityBtn_clcksuccess</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="a2636a">  <td>24/03/04 15:29:02</td>   <td>28667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OpportunityListingTest.TC008_oppListcountChck()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@74cadd41]">TC008_oppListcountChck</td> 
+  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="a2636a">  <td>24/03/04 15:28:57</td>   <td>24095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@74cadd41]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:48</td>   <td>15054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:48</td>   <td>15054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:48</td>   <td>15054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="a2636a">  <td>24/03/04 15:28:57</td>   <td>24095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;OpportunityListingTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@74cadd41]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:48</td>   <td>15054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:48</td>   <td>15054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:48</td>   <td>15054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.initialization()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="a2636a">  <td>24/03/04 15:29:04</td>   <td>30653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@74cadd41]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:51</td>   <td>17814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:51</td>   <td>17814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:51</td>   <td>17814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:51</td>   <td>17814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:51</td>   <td>17814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="a2636a">  <td>24/03/04 15:29:04</td>   <td>30653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;OpportunityListingTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.OpportunityListingTest@74cadd41]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
+<tr bgcolor="baa963">  <td>24/03/04 15:28:51</td>   <td>17814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.vspace.qa.TestCases.LoginTest@3e34ace1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1789282489</td>   <td></td> </tr>
 </table>
